--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -391,7 +391,8 @@ input {
       background-size: contain;
       display: inline-block;
       padding: 20px 20px 15px;
-      width: auto;
+      width: 400px;
+      max-width: 100%;
       figure {
         padding-bottom: 10px;
         display: table;
@@ -414,6 +415,14 @@ input {
         max-width: 400px;
         iframe {
           width: 100%;
+        }
+      }
+      .pdf-container {
+        width: 100%;
+        max-width: 400px;
+        iframe {
+          width: 100%;
+          min-height: 250px;
         }
       }
     }
