--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,5 +44,17 @@
       <%= render 'layouts/footer' %>
       <%= debug(params) if Rails.env.development? %>
     </div>
+    <!-- pdfの遅延読み込み -->
+    <script>
+      function pdf_defer() {
+        var iframes = document.querySelectorAll('.pdf');
+        iframes.forEach(function(iframe){
+          if(iframe.getAttribute('data-src')) {
+            iframe.setAttribute('src',iframe.getAttribute('data-src'));
+          }
+        });
+      }
+      window.addEventListener('load', pdf_defer);
+    </script>
   </body>
 </html>
