--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -10,13 +10,13 @@
         </p>
         <div class="links">
           <% if micropost.links.present? %>
-            <% begin %>
+            <% begin %>   <!-- OEMの表示（YouTube, Twitter 等） -->
               <% oembed = OEmbed::Providers.get(micropost.links, maxwidth: "400") %>
               <div class="links-container">
                 <div class="oembed"><%= oembed.html.html_safe %></div>
               </div>
             <% rescue %>
-              <% begin %>
+              <% begin %>   <!-- OGPの表示（Webサイト） -->
                 <% og = og_get(micropost.links) %>
                 <% if og %>
                   <div class="links-container">
@@ -33,6 +33,16 @@
                 <% end %>
               <% rescue %>
               <% end %>
+            <% end %>
+            <!-- pdfリンクのプレビュー -->
+            <% link = micropost.links %>
+            <% if link.end_with?(".pdf") %>
+              <% pdf_link = "https://drive.google.com/viewerng/viewer?embedded=true&url=#{link}" %>
+              <div class="links-container">
+                <div class="pdf-container">
+                  <iframe class="pdf" data-src=<%= pdf_link %>></iframe>
+                </div>
+              </div>
             <% end %>
           <% end %>
         </div>
