--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -639,15 +639,72 @@ span.image {
 }
 
 
+/* micropost_form */
+.micropost_form {
+  .image {
+    input {
+      margin-bottom: 8px;
+    }
+  }
 
-// .micropost-form {
-//   margin-left: auto;
-//   width: calc(100% - 20px);
-//   background-color: #eeeeee80;
-//   .micropost {
-//     padding: 20px 20px 10px;
-//   }
-// }
+  /* slide_post */
+  .slide_post {
+    .button_to {
+      display: inline-block;
+    }
+    .btn-slide {
+      width: 134px;
+      padding: 4px 0px;
+      margin-right: 4px;
+    }
+    span {
+      display: inline-block;
+    }
+    .slide-modal-wrapper {
+      position: fixed;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      background-color: rgba(0, 0, 0, 0.5);
+      z-index: 100;
+      width: 100%;
+      display: block;
+      color: rgba(0, 0, 0, 0.7);
+      .slide-modal {
+        position: absolute;
+        top: 20%;
+        left: 50%;
+        transform: translateX(-50%);
+        -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+        background-color: #e6ecf0;
+        padding: 10px;
+        width: 350px;
+        height: 190px;
+        .close-modal {
+          display: block;
+          float: right;
+          padding-right: 4px;
+        }
+        input {
+          display: inline-block;
+          width: auto;
+        }
+        label {
+          padding-right: 10px;
+        }
+        .btn-ok {
+          display: block;
+          margin-left: auto;
+        }
+        .error_messages_easy {
+          color: red;
+        }
+      }
+    }
+  }
+}
 
 
 /* micropostのshow画面 */
