--- a/app/views/slides/destroy.js.erb
+++ b/app/views/slides/destroy.js.erb
@@ -1,1 +1,5 @@
+$micropost_content = $(".micropost_form > form > .field > #micropost_content").val()
+
 $(".micropost_form").html("<%= escape_javascript(render partial: 'microposts/micropost_form') %>")
+
+$(".micropost_form > form > .field > #micropost_content").val($micropost_content)
