--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -425,6 +425,14 @@ input {
           min-height: 250px;
         }
       }
+      .slide-container {
+        width: 100%;
+        max-width: 400px;
+        iframe {
+          width: 100%;
+          height: 250px;
+        }
+      }
     }
   }
   .response-form {
