modify js setting

--- a/app/views/microposts/_micropost_form.html.erb
+++ b/app/views/microposts/_micropost_form.html.erb
@@ -31,5 +31,5 @@
 </script>
 
 <% if @micropost.errors.any? %>
-  <%= javascript_pack_tag 'render_root' %>
+  <%= javascript_pack_tag 'render/root' %>
 <%end%>
