match non ogp site

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -417,6 +417,7 @@ input {
           width: 100%;
         }
       }
+      .ogp_title { font-weight:bold; }
       .pdf-container {
         width: 100%;
         max-width: 400px;
