--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
+<header class="navbar navbar-fixed-top navbar-default">
   <div class="container">
     
     <% if logged_in? %>
@@ -23,7 +23,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to site_name, root_path, id: "logo" %>
+      <%# <%= link_to site_name, root_path, id: "logo" %>
+      <%= link_to image_tag("logo_portcurio.png", alt: "portcurio logo", height: "50px"), root_path %>
     </div>
     <nav>
       <ul class="nav navbar-nav navbar-right navbar-collapse collapse" id="navbar">
