fix rspec for logo

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,7 +24,7 @@
         <span class="icon-bar"></span>
       </button>
       <%# <%= link_to site_name, root_path, id: "logo" %>
-      <%= link_to image_tag("logo_portcurio.png", alt: "portcurio logo", height: "50px"), root_path %>
+      <%= link_to image_tag("logo_portcurio.png", alt: "portcurio logo", height: "50px"), root_path, id: "service_logo" %>
     </div>
     <nav>
       <ul class="nav navbar-nav navbar-right navbar-collapse collapse" id="navbar">
