delete border of hamburger menu

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -79,14 +79,14 @@ p {
 }
 
 .navbar-toggle {
-  margin-right: 0;
+  margin-right: 10px;
+  border: none;
 }
 
 .icon-container {
   display: block;
   float: right;
   padding-top: 14px;
-  padding-left: 10px;
 }
 
 .fa-stack {
