--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -17,17 +17,11 @@
   </div>
 <% else %>
   <div class="center jumbotron">
-    <!--<h1>Welcome to the Sample App</h1>-->
     <h1>
       <div class=logo_containter>
-        <%= image_tag("logo_portcurio.png", alt: site_name, width: "400px") %>
+        <%= image_tag("logo_portcurio.png", alt: site_name, width: "100%") %>
       </div>
     </h1>
-    <!--<h2>-->
-    <!--  This is the home page for the-->
-    <!--  <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>-->
-    <!--  sample application.-->
-    <!--</h2>-->
     <div class=top_description>
       <h2>
         このSNSは世界中の教材を集約し、協力してブラッシュアップしていくことを目的としています。ご自身の教材のポートフォリオとしても活用してください。
