adjust bell-icon's size

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,10 +6,10 @@
         <%= link_to notified_notifications_path do %>
           <span class="fa-stack">
             <% if unchecked_notifications.any? %>
-              <i class="far fa-bell fa-stack-2x bell-icon" style="font-size: 0.8em"></i>
+              <i class="far fa-bell fa-stack-1x bell-icon"></i>
               <i class="fas fa-circle n-circle fa-stack-1x notification-icon"></i>
             <% else %>
-              <i class="far fa-bell fa-stack-2x bell-icon" style="font-size: 0.8em"></i>
+              <i class="far fa-bell fa-stack-1x bell-icon"></i>
             <% end %>
           </span>
           <% end %>
