--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -93,7 +93,7 @@ p {
 .icon-container {
   display: block;
   float: right;
-  padding-top: 14px;
+  padding-top: 16px;
 }
 
 .fa-stack {
@@ -104,6 +104,7 @@ p {
   color: #888;
   margin: 0;
   padding: 0;
+  font-size: 1.3em;
 }
 .bell-icon:hover {
 	color: #444;
