--- a/app/views/microposts/_micropost_form.html.erb
+++ b/app/views/microposts/_micropost_form.html.erb
@@ -14,7 +14,7 @@
 <% end %>
 <div class="slide_post">
   <span class="slide_form">
-    <%= button_to "スライドを投稿する", new_microposts_slides_path, method: :get, class: "btn-default btn-slide", remote: true %>
+    <%= button_to "スライドを投稿する", new_microposts_slides_path, method: :get, class: "btn btn-default btn-slide", remote: true %>
   </span>
   <span class="file_type">選択されていません</span>
   <span class="slide_post_modal"></span>
