--- a/app/views/comments/show.js.erb
+++ b/app/views/comments/show.js.erb
@@ -1,16 +1,16 @@
 <% if defined? @comments %>
   <% comment_count = @feedmicropost.comments.where(parent_id: nil).count %>
-  $(".comment-btn-<%= @feedmicropost.id %>").html('<%= button_to "コメント #{comment_count}", comment_path(@feedmicropost.id), { method: :get, params: {userprofile_id: @userprofile.id}, class: "comment-btn btn btn-link", remote: true } %>').hide().fadeIn(300)
-  $(".comment-close-<%= @feedmicropost.id %>").html('<%= button_to "閉じる", close_comment_path(@feedmicropost.id), { method: :get, params: {userprofile_id: @userprofile.id}, class: "comment-close-btn btn btn-link", remote: true } %>').hide().fadeIn(300)
+  $(".comment-btn-<%= @feedmicropost.id %>").html('<%= button_to "コメント #{comment_count}", comment_path(@feedmicropost.id), { method: :get, params: {userprofile_id: @userprofile.id}, class: "comment-btn btn-link", remote: true } %>').hide().fadeIn(300)
+  $(".comment-close-<%= @feedmicropost.id %>").html('<%= button_to "閉じる", close_comment_path(@feedmicropost.id), { method: :get, params: {userprofile_id: @userprofile.id}, class: "comment-close-btn btn-link", remote: true } %>').hide().fadeIn(300)
   $(".comment-<%= @feedmicropost.id %>").html("<%= escape_javascript(render partial: 'comments/comments') %>").hide().fadeIn(300)
 
 <% elsif not @comment.parent %>
 <!-- 親コメントがない場合 -->
   $(".replies-wrap").html('')  <!-- 他のリプライウィンドウの非表示 -->
   <% reply_count = @comment.replies.count %>
-  $(".reply-btn-<%= @comment.id %>").html('<%= button_to "Reply #{reply_count}", micropost_comment_path(@comment.micropost_id, @comment.id), { method: :get, params: {userprofile_id: @userprofile.id}, class: "reply-btn btn btn-link", remote: true } %>').hide().fadeIn(300)
+  $(".reply-btn-<%= @comment.id %>").html('<%= button_to "Reply #{reply_count}", micropost_comment_path(@comment.micropost_id, @comment.id), { method: :get, params: {userprofile_id: @userprofile.id}, class: "reply-btn btn-link", remote: true } %>').hide().fadeIn(300)
   $(".reply-close-btn").html('')  <!-- 他の「閉じる」リンクの非表示 -->
-  $(".reply-close-<%= @comment.id %>").html('<%= button_to "閉じる", close_micropost_comment_path(@feedmicropost.id, @comment.id), { method: :get, params: {userprofile_id: @userprofile.id}, class: "reply-close-btn btn btn-link", remote: true } %>').hide().fadeIn(300)
+  $(".reply-close-<%= @comment.id %>").html('<%= button_to "閉じる", close_micropost_comment_path(@feedmicropost.id, @comment.id), { method: :get, params: {userprofile_id: @userprofile.id}, class: "reply-close-btn btn-link", remote: true } %>').hide().fadeIn(300)
   $(".reply-<%= @comment.id %>").html("<%= escape_javascript(render partial: 'comments/replies') %>").hide().fadeIn(100)
   <% if $mention_ids %>
     <% mention_users = User.where(id: $mention_ids) %>
@@ -22,7 +22,7 @@
 <% else %>
   <!-- 親コメントがある場合 -->
   <% reply_count = @comment.parent.replies.count %>
-  $(".reply-btn-<%= @comment.parent.id %>").html('<%= button_to "Reply #{reply_count}", micropost_comment_path(@comment.parent.micropost_id, @comment.parent_id), { method: :get, params: {userprofile_id: @userprofile.id}, class: "reply-btn btn btn-link", remote: true } %>').hide().fadeIn(300)
+  $(".reply-btn-<%= @comment.parent.id %>").html('<%= button_to "Reply #{reply_count}", micropost_comment_path(@comment.parent.micropost_id, @comment.parent_id), { method: :get, params: {userprofile_id: @userprofile.id}, class: "reply-btn btn-link", remote: true } %>').hide().fadeIn(300)
   $(".reply-<%= @comment.parent_id %> .replies").html('<%= escape_javascript(render @replies) %>').hide().fadeIn(300)
   $(".reply-<%= @comment.parent_id %> .error_explanation").html('')
   $(".reply-<%= @comment.parent_id %> .mention").html('')
