--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -43,10 +43,7 @@
               <li><%= link_to "Activity", activity_notifications_path %></li>
               <li><%= link_to "Profile", current_user %></li>
               <li><%= link_to "Settings", edit_user_path(current_user) %></li>
-              <li class="divider"></li>
-              <li>
-                <%= link_to "Log out", logout_path, method: :delete %>
-              </li>
+              <li><%= link_to "Log out", logout_path, method: :delete %></li>
             </ul>
           </li>
         <% else %>
