--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,6 @@
-<% provide(:title, 'All users') %>
-<h1>All users</h1>
+<% title = t '.title' %>
+<% provide(:title, title) %>
+<h1><%= title %></h1>
 
 <%= paginate @users %>
 
