change color of like button

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -639,11 +639,11 @@ span.image {
 }
 
 .like-btn {
-  color: blue;
+  color: #1ABC9C;
 }
 
 .like-btn-unlike {
-  color: gray;
+  color: #95A5A6;
 }
 
 .likes-count {
