update index pages

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -488,6 +488,12 @@ input {
 .subscribe-btn-invalid {
   color: gray;
 }
+.users_container {
+  display: flex;
+	justify-content: center;
+	align-items: center;
+  ul { padding: 0; }
+}
 
 
 
