--- a/app/views/subscribes/_invalid.html.erb
+++ b/app/views/subscribes/_invalid.html.erb
@@ -1,3 +1,3 @@
-<%= button_tag :type => "button", :disabled => true, class: "btn btn-link subscribe-btn" do %>
-  <i class="far fa-bell fa-lg subscribe-btn-invalid"></i>
+<%= button_tag :type => "button", :disabled => true, class: "btn btn-link subscribe-btn inline-block" do %>
+  <i class="far fa-bell fa-lg subscribe-btn-invalid inline-block"></i>
 <% end %>
