--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -1,8 +1,12 @@
 <% provide(:title, 'All users feed') %>
-<h1>All users feed</h1>
+<div class="row">
+  <div class="col-md-8 col-md-offset-2">
+    <h1>All users feed</h1>
 
-<ol class="microposts">
-  <%= render @feedall %>
-</ol>
+    <ol class="microposts">
+      <%= render @feedall %>
+    </ol>
 
-<%= paginate @feedall %>
+    <%= paginate @feedall %>
+  </div>
+</div>
