--- a/app/views/relationships/_unfollow.html.erb
+++ b/app/views/relationships/_unfollow.html.erb
@@ -7,5 +7,5 @@
   <% else %>
     <div><%= hidden_field_tag :userprofile_id, current_user.id, { id: SecureRandom.hex(4) } %></div>
   <% end %>
-  <%= f.submit "Unfollow", class: "btn btn-default btn-follow" %>
+  <%= f.submit "Unfollow", class: "btn btn-default btn-follow inline-block" %>
 <% end %>
