--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,10 +1,12 @@
 <li>
   <%= gravatar_for user, size: 50 %>
-  <%= link_to user.name, user %>
-  <% if current_user.admin? && !current_user?(user) %>
-    | <%= link_to "delete", user, method: :delete,
-                                  data: { confirm: "You sure?" } %>
-  <% end %>
-  
-  <%= (render partial: 'relationships/follow_form', locals: {user: user}) if logged_in? %>
+  <div class=inline-block>
+    <%= link_to user.name, user %>
+    <% if current_user.admin? && !current_user?(user) %>
+      | <%= link_to "delete", user, method: :delete,
+                                    data: { confirm: "You sure?" } %>
+    <% end %>
+    
+    <%= (render partial: 'relationships/follow_form', locals: {user: user}) if logged_in? %>
+  </div>
 </li>
