--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -439,7 +439,8 @@ input {
     margin-bottom: 5px; 
     span { 
       padding-right: 10px;
-      font-size: 16px;
+      font-size: 20px;
+      font-weight: bold;
       line-height: 52px;
     }
   }
