--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -7,6 +7,6 @@
       <%= render @feedall %>
     </ol>
 
-    <%= paginate @feedall %>
+    <div class='center'><%= paginate @feedall %></div>
   </div>
 </div>
