--- a/app/views/notifications/activity.html.erb
+++ b/app/views/notifications/activity.html.erb
@@ -8,6 +8,6 @@
         <%= render partial: 'notifications/activity', locals: {activity: activity} %>
       <% end %>
     </ol>
-    <%= paginate @activities %>
+    <div class='center'><%= paginate @activities %></div>
   </div>
 </div>
