--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -27,7 +27,7 @@
         <!--  <%= render user %>-->
         <!--<% end %>-->
       </ul>
-      <%= paginate @users %>
+      <div class='center'><%= paginate @users %></div>
     <% end %>
   </div>
 </div>
