--- a/app/views/notifications/notified.html.erb
+++ b/app/views/notifications/notified.html.erb
@@ -10,6 +10,6 @@
       <%= render @notifications %>
     </ol>
 
-    <%= paginate @notifications %>
+    <div class='center'><%= paginate @notifications %></div>
   </div>
 </div>
