--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -739,6 +739,7 @@ span.image {
       padding: 0 40px;
     }
     height: 500px;
+    border-radius: 4px;
     overflow-y: auto;
     overflow-y: scroll;
     .close-modal {
@@ -856,7 +857,8 @@ span.image {
         background-color: #e6ecf0;
         padding: 10px;
         width: 350px;
-        height: 190px;
+        height: 192px;
+        border-radius: 4px;
         .close-modal {
           display: block;
           float: right;
@@ -872,9 +874,11 @@ span.image {
         .btn-ok {
           display: block;
           margin-left: auto;
+          font-size: 16px;
         }
         .error_messages_easy {
           color: red;
+          list-style: none;
         }
       }
     }
